// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch renders a basic Switch 1`] = `
<div>
  <div
    class="ms-Switch-root"
    id="switch-1"
  >
    <div
      class=""
    >
      <div
        class="ms-Switch-track"
      />
      <div
        class=""
        style="transform: translate(0%);"
      >
        <div
          class="ms-Switch-thumb"
        />
      </div>
      <input
        class=""
        type="checkbox"
      />
    </div>
  </div>
  <div
    class="ms-Switch-root checked"
    id="switch-2"
  >
    <div
      class=""
    >
      <div
        class="ms-Switch-track"
      />
      <div
        class=""
        style="transform: translate(100%);"
      >
        <div
          class="ms-Switch-thumb"
        />
      </div>
      <input
        checked=""
        class=""
        type="checkbox"
      />
    </div>
  </div>
</div>
`;

exports[`Switch renders a disabled Switch 1`] = `
<div>
  <div
    class="ms-Switch-root"
    id="switch-1"
  >
    <div
      class=""
    >
      <div
        class="ms-Switch-track"
      />
      <div
        class=""
        style="transform: translate(0%);"
      >
        <div
          class="ms-Switch-thumb"
        />
      </div>
      <input
        class=""
        disabled=""
        type="checkbox"
      />
    </div>
  </div>
  <div
    class="ms-Switch-root checked"
    id="switch-2"
  >
    <div
      class=""
    >
      <div
        class="ms-Switch-track"
      />
      <div
        class=""
        style="transform: translate(100%);"
      >
        <div
          class="ms-Switch-thumb"
        />
      </div>
      <input
        checked=""
        class=""
        disabled=""
        type="checkbox"
      />
    </div>
  </div>
</div>
`;

exports[`Switch renders a labeled Switch 1`] = `
<div>
  <label
    class="ms-Switch-root"
    id="switch-1"
  >
    <div
      class=""
    >
      <div
        class="ms-Switch-track"
      />
      <div
        class=""
        style="transform: translate(0%);"
      >
        <div
          class="ms-Switch-thumb"
        />
      </div>
      <input
        class=""
        type="checkbox"
      />
    </div>
    Hello
  </label>
</div>
`;
